<resources>
    <string name="app_name">Naturally Levained</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Naturally Levained</string>
    <string name="nav_header_subtitle">Made with love by Caitlin Swim</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_order">Order</string>
    <string name="nav_menu">Menu</string>
    <string name="nav_about">About</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_communicate">Communicate</string>
    <string name="nav_share">Share</string>
    <string name="main_background">Sourdough Bread</string>
</resources>
